# hokuriku-tourism-ai-governance

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DATA_INVENTORY_EXPANSION_ANALYSIS.md  EXECUTIVE_REPORT.en.md  EXECUTIVE_REPORT.ja.md  LICENSE  MANUSCRIPT_METADATA.txt  README.en.all.md  README.ja.md  README.md  bolstered_results.txt  deep_analysis_results.txt  deep_analysis_tojinbo.py  generate_paper_figures.py  pyproject.toml  requirements-nlp.txt  requirements.txt  run_analysis.py  ultimate_governance_report.txt
audit/: STEP1_REPO_INVENTORY.md
audit/tools/: audit_cross_validate.py  audit_csv_quality.py
config/: settings.yaml
jma/: README.md  fetch_jma_monthly.py  jma_fukui_hourly_8.csv  jma_fukuicity_hourly_8.csv  jma_katsuyama_hourly_8.csv  jma_mihama_hourly_8.csv  jma_mikuni_hourly_8.csv  merge_and_clean_jma.py  merge_clean_jma.py
jma/orig-full-monthly/: README.md  merge_clean_jma_8fields.py
kansei/: KANSEI_SUMMARY.txt  visualizer_kansei_local.py
output/: EXECUTIVE_REPORT.en.md  EXECUTIVE_REPORT.ja.md  EXECUTIVE_REPORT.md  HOKURIKU_TOURISM_AI_GOVERNANCE_STRATEGY.ja.md  HOKURIKU_TOURISM_AI_GOVERNANCE_STRATEGY.md  HOKURIKU_TOURISM_AI_GOVERNANCE_STRATEGY_EN.md  HOKURIKU_TOURISM_AI_GOVERNANCE_STRATEGY_JA.md  analysis_metrics.txt  grant_summary.json  paper_appendices.md  table1_ols.tex  table2_statistical_rigor.tex  table3_key_metrics.tex  table4_model_comparison.tex  table_key_metrics.tex  table_model_comparison.tex  table_ols.tex  table_statistical_rigor.tex  validation_report.json
output/kansei/: KANSEI_RESEARCH_BRIEF.en.md  KANSEI_RESEARCH_BRIEF.ja.md  KANSEI_SUMMARY.en.txt
output/pdf/: EXECUTIVE_REPORT.en.md  EXECUTIVE_REPORT.ja.md  executive_report_ja.md  executive_report_pdf.md  executive_report_pdf_en.md  executive_report_pdf_ja.md  (+3 more)
scripts/: generate_grant_ccf_3pref_figure.py  generate_paper_figures.py  generate_pdfs.py  generate_weather_shield_map.py
src/: __init__.py  config.py  data_loader.py  economics.py  feature_engineering.py  generate_grant_summary.py  kansei.py  latex_export.py  models.py  privacy_nlp.py  report.py  run_analysis.py  spatial.py  validator.py  visualizer.py
tests/: test_features.py  test_kansei.py  test_kansei_zero_shot.py  test_math.py  test_models.py  test_privacy_nlp.py  test_validator.py
tools/: generate_grant_summary.py
