[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hokuriku-tourism-ai-governance"
version = "2.1.0"
description = "AI-Driven Visitor Demand Forecasting & Spatial Optimization for Hokuriku Tourism Governance"
readme = "README.md"
license = {text = "All Rights Reserved"}
requires-python = ">=3.10"
authors = [
    {name = "Amil Khanzada", email = "amil@amilkhanzada.com"},
]
keywords = [
    "tourism",
    "demand-forecasting",
    "kansei-engineering",
    "discomfort-index",
    "spatial-analysis",
    "hokuriku",
    "fukui",
    "machine-learning",
    "regression",
    "kanazawa-university",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "jpholiday>=0.1.8",
    "PyYAML>=6.0",
    "japanize-matplotlib>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/amilkh/hokuriku-tourism-ai-governance"
Issues = "https://github.com/amilkh/hokuriku-tourism-ai-governance/issues"

[project.scripts]
htag-run = "src.run_analysis:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["src/visualizer.py", "src/generate_grant_summary.py"]

[tool.coverage.report]
show_missing = true
precision = 1
